Updated Dio logger. Updated dependency injection. "

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,7 @@
 {
-  "helloWorld": "!مرحبا بالعالم",
+  "helloWorld": "Hello World",
+  "@helloWorld": {
+    "description": "The conventional newborn programmer greeting"
+  }
+
 }
