--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,5 @@
 {
-  "helloWorld": "Hello World!",
+  "helloWorld": "!مرحبا بالعالم",
   "@helloWorld": {
     "description": "The conventional newborn programmer greeting"
   }
